<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkTerminos"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/checkTerminos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contraseña" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:onClick="Ingresar"
        android:text="@string/btnIngresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkRecordar" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:onClick="Registrar"
        android:text="@string/btnRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />

    <CheckBox
        android:id="@+id/checkRecordar"
        android:layout_width="195dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/checkRecordar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTerminos" />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt1" />

    <EditText
        android:id="@+id/txt_contraseña"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_contraseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt2" />

    <TextView
        android:id="@+id/edt1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/edt1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edt2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/edt2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>